--- a/views/index.pug
+++ b/views/index.pug
@@ -18,36 +18,36 @@ head
           // Modal Body
           .modal-body
             //#editForm.form(role='form' method='GET' action='https://www.google.com/')
-            form(role='form' method='GET' action='https://www.google.com/')
+            form(role='form' method='GET' action='https://http://ec2-18-118-205-181.us-east-2.compute.amazonaws.com:3000/')
               div.form-group
                 label(for='time1') Set point 1:
-                input#name.form-control(type='text', placeholder='Enter 4 digit time (ex: 10:03)' name='time1')
+                input#name.form-control(type='text',required=isRequired, placeholder='Enter 4 digit time (ex: 10:03)' name='time1')
               div.form-group
                 label(for='temp1') Low temperature:
-                input#name.form-control(type='text', placeholder='Enter the low temperature' name='temp1')
+                input#name.form-control(type='text',required=isRequired, placeholder='Enter the low temperature' name='temp1')
                 div.form-group
                 label(for='temp2') High temperature:
-                input#name.form-control(type='text', placeholder='Enter the high temperature' name='temp2')
+                input#name.form-control(type='text',required=isRequired, placeholder='Enter the high temperature' name='temp2')
 
               div.form-group
                 label(for='time2') Set point 2:
-                input#name.form-control(type='text', placeholder='Enter 4 digit time (ex: 10:03)' name='time2')
+                input#name.form-control(type='text',required=isRequired, placeholder='Enter 4 digit time (ex: 10:03)' name='time2')
               div.form-group
                 label(for='temp3') Low temperature:
-                input#name.form-control(type='text', placeholder='Enter the low temperature' name='temp3')
+                input#name.form-control(type='text',required=isRequired, placeholder='Enter the low temperature' name='temp3')
                 div.form-group
                 label(for='temp4') High temperature:
-                input#name.form-control(type='text', placeholder='Enter the high temperature' name='temp4')
+                input#name.form-control(type='text',required=isRequired, placeholder='Enter the high temperature' name='temp4')
 
               div.form-group
                 label(for='time3') Set point 2:
-                input#name.form-control(type='text', placeholder='Enter 4 digit time (ex: 10:03)' name='time3')
+                input#name.form-control(type='text',required=isRequired, placeholder='Enter 4 digit time (ex: 10:03)' name='time3')
               div.form-group
                 label(for='temp5') Low temperature:
-                input#name.form-control(type='text', placeholder='Enter the low temperature' name='temp5')
+                input#name.form-control(type='text',required=isRequired, placeholder='Enter the low temperature' name='temp5')
                 div.form-group
                 label(for='temp6') High temperature:
-                input#name.form-control(type='text', placeholder='Enter the high temperature' name='temp6')
+                input#name.form-control(type='text',required=isRequired, placeholder='Enter the high temperature' name='temp6')
               button.btn.btn-primary(type="submit", name="asdf") Submit
               button.btn.btn-default(type="button", data-dismiss="modal")
                 | Close
