--- a/views/index.pug
+++ b/views/index.pug
@@ -18,7 +18,7 @@ head
           // Modal Body
           .modal-body
             //#editForm.form(role='form' method='GET' action='https://www.google.com/')
-            form(role='form' method='GET' action='https://http://ec2-18-118-205-181.us-east-2.compute.amazonaws.com:3000/')
+            form(role='form' method='GET' action='http://ec2-18-118-205-181.us-east-2.compute.amazonaws.com:3000/')
               div.form-group
                 label(for='time1') Set point 1:
                 input#name.form-control(type='text',required=isRequired, placeholder='Enter 4 digit time (ex: 10:03)' name='time1')
