--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,9 @@ head
   link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css')
 
   body
+    h2
+      | Migo's Awesome UI
+    h6=#{message}
     .modal-dialog
         .modal-content
           // Modal Header
