--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ head
   body
     h2
       | Migo's Awesome UI
-    h6=#{message}
+    h6 #{message}
     .modal-dialog
         .modal-content
           // Modal Header
