--- a/views/index.pug
+++ b/views/index.pug
@@ -26,30 +26,30 @@ head
                 label(for='time1') Set point 1:
                 input#name.form-control(type='text',required=isRequired, placeholder='Enter 4 digit time (ex: 10:03)' name='time1')
               div.form-group
-                label(for='temp1') Low temperature:
+                label(for='temp1') Low temperature 1:
                 input#name.form-control(type='text',required=isRequired, placeholder='Enter the low temperature' name='temp1')
                 div.form-group
-                label(for='temp2') High temperature:
+                label(for='temp2') High temperature 1:
                 input#name.form-control(type='text',required=isRequired, placeholder='Enter the high temperature' name='temp2')
 
               div.form-group
                 label(for='time2') Set point 2:
                 input#name.form-control(type='text',required=isRequired, placeholder='Enter 4 digit time (ex: 10:03)' name='time2')
               div.form-group
-                label(for='temp3') Low temperature:
+                label(for='temp3') Low temperature 2:
                 input#name.form-control(type='text',required=isRequired, placeholder='Enter the low temperature' name='temp3')
                 div.form-group
-                label(for='temp4') High temperature:
+                label(for='temp4') High temperature 2:
                 input#name.form-control(type='text',required=isRequired, placeholder='Enter the high temperature' name='temp4')
 
               div.form-group
                 label(for='time3') Set point 2:
                 input#name.form-control(type='text',required=isRequired, placeholder='Enter 4 digit time (ex: 10:03)' name='time3')
               div.form-group
-                label(for='temp5') Low temperature:
+                label(for='temp5') Low temperature 3:
                 input#name.form-control(type='text',required=isRequired, placeholder='Enter the low temperature' name='temp5')
                 div.form-group
-                label(for='temp6') High temperature:
+                label(for='temp6') High temperature 3:
                 input#name.form-control(type='text',required=isRequired, placeholder='Enter the high temperature' name='temp6')
               button.btn.btn-primary(type="submit", name="asdf") Submit
               button.btn.btn-default(type="button", data-dismiss="modal")
