--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,7 @@ head
     h2
       | Migo's Awesome UI
     h6 #{mes}
+    h6 Current Status - Heater: #{status}
     .modal-dialog
         .modal-content
           // Modal Header
