--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,6 @@
 head
   meta(charset='utf-8')
-  title Title2
+  title IoT Project - Lujan
   link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css')
 
   body
