--- a/views/stats.pug
+++ b/views/stats.pug
@@ -1,36 +1,43 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="utf-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    title Bootstrap 4 Starter With Nav
-    link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous")
+head
+  meta(charset='utf-8')
+  title IoT Project - Lujan
+  link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css')
+
   body
-    nav.navbar.navbar-expand-md.navbar-dark.bg-dark.fixed-top
-      a.navbar-brand(href="#") BRAND
-      button.navbar-toggler(type="button" data-toggle="collapse" data-target="#main-navbar")
-        span.navbar-toggler-icon
-      #main-navbar.collapse.navbar-collapse
-        ul.navbar-nav.mr-auto
-          li.nav-item.active
-            a.nav-link(href="#") Link 1
-          li.nav-item
-            a.nav-link(href="#") Link 2
-          li.nav-item
-            a.nav-link(href="#") Link 3
-          li.nav-item.dropdown
-            a#dropdown01.nav-link.dropdown-toggle(href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Dropdown
-            .dropdown-menu
-              a.dropdown-item(href="#") Action 1
-              a.dropdown-item(href="#") Action 2
-              a.dropdown-item(href="#") Action 3
-        form.form-inline.my-2.my-lg-0
-          input.form-control.mr-sm-2(type="text" placeholder="Input...")
-          button.btn.btn-primary.my-2.my-sm-0(type="submit") OK
-    main.container(role="main" style="padding: 60px;")
-        h1.text-center Bootstrap starter template
-        p.lead.text-center This document as a way to quickly start a new Bootstrap 4 project.
-        p.text-center Build upon this barebones HTML document.
-    script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous")
-    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous")
+    h2
+      | Migo's Awesome UI
+    h6 #{mes}
+    .modal-dialog
+        .modal-content
+          // Modal Header
+          .modal-header
+            button.close(type="button", data-dismiss="modal")
+              span(aria-hidden="true") ×
+              span.sr-only Close
+            h4#myModalLabel.modal-title
+              | Current Status of Heater
+              h6#myModalLabel.modal-title
+              | 
+          // Modal Body
+          .modal-body
+          ul
+            li Heater Status: #{heaterStatus}
+            li Current Temp: #{currentTemp}
+            li Set Point 1: #{time1}
+            li 
+                ul 
+                    li Low Temp: #{lowTemp1}
+                    li High Temp: #{hiTemp1}
+            li Set Point 2: #{time2}
+            li 
+                ul 
+                    li Low Temp: #{lowTemp2}
+                    li High Temp: #{hiTemp2}
+            li Set Point 3: #{time3}
+            li 
+                ul 
+                    li Low Temp: #{lowTemp3}
+                    li High Temp: #{hiTemp3}
+
+
+          
