Status and stats page

--- a/views/stats.pug
+++ b/views/stats.pug
@@ -17,24 +17,24 @@ head
             h4#myModalLabel.modal-title
               | Current Status of Heater
               h6#myModalLabel.modal-title
-              | 
+              | If there's no data at first, refresh page after program has been running for a bit
           // Modal Body
           .modal-body
           ul
             li Heater Status: #{heaterStatus}
             li Current Temp: #{currentTemp}
             li Set Point 1: #{time1}
-            li 
+            li Threshold Temperatures
                 ul 
                     li Low Temp: #{lowTemp1}
                     li High Temp: #{hiTemp1}
             li Set Point 2: #{time2}
-            li 
+            li Threshold Temperatures
                 ul 
                     li Low Temp: #{lowTemp2}
                     li High Temp: #{hiTemp2}
             li Set Point 3: #{time3}
-            li 
+            li Threshold Temperatures
                 ul 
                     li Low Temp: #{lowTemp3}
                     li High Temp: #{hiTemp3}
