--- a/views/stats.pug
+++ b/views/stats.pug
@@ -17,7 +17,7 @@ head
             h4#myModalLabel.modal-title
               | Current Status of Heater
               h6#myModalLabel.modal-title
-              | If there's no data at first, refresh page after program has been running for a bit
+              | This page is unfinished.  The functionality doesn't work yet, I just ran out of time :[
           // Modal Body
           .modal-body
           ul
